[package]
name = "wpilib_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wpilib = {path="../first-rust-competition"}
wpilib = "0.4"
ctre={git="https://github.com/first-rust-competition/ctre-rs", rev="744a1e15f3299dd775d91e8bd5c19c1ddbf70079"}

[package.metadata.frc]
team-number = 1757
rio-address = "10.17.57.2"
target-dir = "target"
executable-name = "wpilib_test"
